--- a/index.html
+++ b/index.html
@@ -1,8 +1,142 @@
-<html>
-  <head>
-    <title> venkat ch - github account </title>
-  </head>
-  <body>
-    <h1> welcome to my github account </h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Venkat CH - Microsoft Certified Proffesional</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="css/clean-blog.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+	<div class="mscert">
+		<img src="images/Microsoft-Certified.png"/>
+	</div>
+	<!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="site-heading">
+                        <h1>Venkat CH</h1>
+                        <hr class="small">
+                        <span class="subheading">Full stack developer from Hyderabad </span>
+                        <span class="subheading">Microsoft Certified Proffesional</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+		<div class="intro-bg"></div>
+    </header>
+	<section class="container">
+		<div class="row newgrids">
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/html5.png" alt="html5">
+				  <p class="h2"> HTML5 </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/css3.png" alt="html5">
+				  <p class="h2"> CSS3 </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/js.png" alt="html5">
+				  <p class="h2"> Javascript </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/html5.png" alt="html5">
+				  <p class="h2"> ES6 & Typescript </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/angularjs.png" alt="html5">
+				  <p class="h2"> Angularjs 1x</p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/angularjs2.png" alt="html5">
+				  <p class="h2"> Angularjs 2x </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/ionic.jpg" alt="html5">
+				  <p class="h2"> ionic Framework </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/bootstrap.jpg" alt="html5">
+				  <p class="h2"> Bootstrap </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/sass.png" alt="html5">
+				  <p class="h2"> SASS </p>
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="https://venkatch668.github.io/404page.html" class="thumbnail">
+				  <img src="images/reactjs.png" alt="html5">
+				  <p class="h2"> React.js </p>
+				</a>
+			</div>
+			
+		</div>
+	
+	</section>
+    
+	<footer>
+		<div class="container">
+			<p class="text-center">@Thanks for visiting</p> 
+		</div>
+	</footer>
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/clean-blog.min.js"></script>
+
+</body>
+
 </html>
